fixed link overflow

--- a/css/KB.css
+++ b/css/KB.css
@@ -253,6 +253,7 @@ header {
     -o-background-size: cover;
     
     transition: background 1.5s linear;
+    overflow: auto;
 }
 
 
@@ -318,9 +319,7 @@ header .header-content .header-content-inner p {
     font-weight: 400;
     line-height: 130%; 
     margin-right: 0;
-    text-align: right;
-    padding-right: 50px;
-    
+    text-align: right;    
 }
 
 #banner-text-small {
@@ -334,7 +333,6 @@ header .header-content .header-content-inner p {
     font-size: 24px;
     padding-bottom: 15%;
     font-weight: 700;
-    margin-right: 50px;
     margin-top: 20px;
 }
 
@@ -785,9 +783,8 @@ span.glyphicon.custom:hover {
     font-size:40px;
 }
 
-
+/**** END WHAT WE DO ****/
 /**** FEATURED IN *****/
-
 
 #featuredInRow {
     text-align: justify;
@@ -926,6 +923,22 @@ h2.featuredIn {
     text-decoration: none;
 }
 
+/********** END FEATURED IN *******/
+/********** HELP US **************/
+
+.helpUsImages {
+    width: auto;
+    max-height: 100%;
+}
+
+
+
+
+
+
+
+/********** END HELP US ***********/
+
 /*********** RANDOM CUSTOM ********/
 .custom-pad {
     padding-top: 20px;
@@ -954,9 +967,6 @@ h2.featuredIn {
 .top-padding-50 {
     padding-top: 50px;
 }
-
-
-
 
 .larger-bolder-text {
     font-size: 25px;
